--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".SettingsActivity"
+                  android:label="@string/action_settings"
+                  android:theme="@style/AppBaseTheme"/>
     </application>
 
 </manifest>
