--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,24 +7,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
 
     <uses-feature
         android:name="android.hardware.location"
         android:required="true"
         />
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false"
-        />
-    <uses-feature
-        android:name="android.hardware.compass"
-        android:required="false"
-        />
+
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false"
@@ -63,6 +53,10 @@
 
         <activity android:name=".SettingsActivity"
                   android:label="@string/action_settings"
+                  android:theme="@style/AppBaseTheme"/>
+
+        <activity android:name=".NGWSettingsActivityProxy"
+                  android:label="@string/nextgis_web"
                   android:theme="@style/AppBaseTheme"/>
     </application>
 
