--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':maplibui')
+    compile 'com.nineoldandroids:library:2.4.0+'
 }
