--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+project.extensions.GisApplicationId = 'com.nextgis.mobile'
+
 buildscript {
     repositories {
         jcenter()
