Add permissions to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,27 @@
           package="com.nextgis.mobile"
     >
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/-->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <uses-feature
+    <!--uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/-->
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <!--uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/-->
+
+    <!--uses-feature
         android:name="android.hardware.location"
         android:required="true"
-        />
+        /-->
 
     <uses-feature
         android:name="android.hardware.telephony"
@@ -23,6 +33,15 @@
         android:name="android.hardware.wifi"
         android:required="false"
         />
+
+    <!--uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
+    <uses-feature
+        android:name="android.hardware.compass"
+        android:required="false"
+        /-->
 
     <supports-screens
         android:largeScreens="true"
@@ -62,6 +81,12 @@
         <activity android:name=".AboutActivity"
                   android:label="@string/action_about"
                   android:theme="@style/AppBaseTheme"/>
+
+        <provider
+            android:name="com.nextgis.maplib.datasource.NGWLayerContentProvider"
+            android:authorities="com.nextgis.mobile.provider"
+            android:exported="false"
+            android:syncable="true"/>
 
     </application>
 
