Gradle variables for authenticator.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
         targetSdkVersion 21
         versionCode 7
         versionName '2.1'
+
+        resValue "string", "gis_auth_account_type", rootProject.extensions.GisAuthAccountType
     }
     buildTypes {
         release {
