--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 22
     buildToolsVersion '21.1.2'
     defaultConfig {
         applicationId 'com.nextgis.mobile'
         minSdkVersion 8
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 7
         versionName '2.1'
     }
@@ -43,7 +43,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':maplibui')
-    compile 'com.nineoldandroids:library:2.4.0+'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
