--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,27 +24,47 @@
           package="com.nextgis.mobile"
     >
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_STATS"/>
+    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-    <!--uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.VIBRATE"/-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+<!--
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+-->
 
-    <uses-feature android:name="android.hardware.location" android:required="true"/>
-    <uses-feature android:name="android.hardware.telephony" android:required="false"/>
-    <uses-feature android:name="android.hardware.wifi" android:required="false"/>
-    <!--uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.compass" android:required="false"/-->
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="true"
+        />
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false"
+        />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false"
+        />
+<!--
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
+    <uses-feature
+        android:name="android.hardware.compass"
+        android:required="false"
+        />
+-->
 
     <supports-screens
         android:largeScreens="true"
@@ -73,42 +93,57 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SettingsActivity"
-                  android:label="@string/action_settings"
-                  android:theme="@style/AppBaseTheme"/>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/action_settings"
+            android:theme="@style/AppBaseTheme"
+            />
 
-        <activity android:name=".NGWSettingsActivityProxy"
-                  android:label="@string/nextgis_web"
-                  android:theme="@style/AppBaseTheme"/>
+        <activity
+            android:name=".NGWSettingsActivityProxy"
+            android:label="@string/nextgis_web"
+            android:theme="@style/AppBaseTheme"
+            />
 
-        <activity android:name=".AboutActivity"
-                  android:label="@string/action_about"
-                  android:theme="@style/AppBaseTheme"/>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/action_about"
+            android:theme="@style/AppBaseTheme"
+            />
 
-        <activity android:name="com.nextgis.maplibui.TracksActivity"
-                  android:label="@string/tracks"
-                  android:theme="@style/AppTheme"/>
+        <activity
+            android:name="com.nextgis.maplibui.TracksActivity"
+            android:label="@string/tracks"
+            android:theme="@style/AppTheme"
+            />
+
+        <service
+            android:process=":tracks"
+            android:name="com.nextgis.maplib.service.TrackerService"
+            />
 
         <service
             android:name="com.nextgis.maplib.service.NGWSyncService"
             android:exported="true"
-            android:process=":sync">
+            android:process=":sync"
+            >
             <intent-filter>
-                <action android:name="android.content.SyncAdapter"/>
+                <action
+                    android:name="android.content.SyncAdapter"
+                    />
             </intent-filter>
-            <meta-data android:name="android.content.SyncAdapter"
-                       android:resource="@xml/syncadapter" />
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter"
+                />
         </service>
-
-        <service
-            android:process=":tracks"
-            android:name="com.nextgis.maplib.service.TrackerService"/>
 
         <provider
             android:name="com.nextgis.maplib.datasource.LayerContentProvider"
             android:authorities="com.nextgis.mobile.provider"
             android:exported="false"
-            android:syncable="true"/>
+            android:syncable="true"
+            />
 
     </application>
 
