--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,7 @@
         android:name=".GISApplication"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"
             >
@@ -94,25 +94,25 @@
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activity.SettingsActivity"
             android:label="@string/action_settings"
             android:theme="@style/AppBlackTextTheme"
             />
 
         <activity
-            android:name=".NGWSettingsActivityProxy"
+            android:name=".activity.NGWSettingsActivityProxy"
             android:label="@string/nextgis_web"
             android:theme="@style/AppBlackTextTheme"
             />
 
         <activity
-            android:name=".AboutActivity"
+            android:name=".activity.AboutActivity"
             android:label="@string/action_about"
             android:theme="@style/AppBlackTextTheme"
             />
 
         <activity
-            android:name="com.nextgis.maplibui.TracksActivity"
+            android:name="com.nextgis.maplibui.activity.TracksActivity"
             android:label="@string/tracks"
             android:theme="@style/AppTheme"
             />
