--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,12 @@
             android:label="@string/action_about"
             />
 
+        <activity
+            android:name=".activity.CreateVectorLayerActivity"
+            android:label="@string/create_layer"
+            android:screenOrientation="portrait"
+            />
+
         <service
             android:name="com.nextgis.maplib.service.NGWSyncService"
             android:process=":sync"
