--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
+//        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
