--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    buildToolsVersion "24.0.0"
     defaultConfig {
         applicationId 'com.nextgis.mobile'
         minSdkVersion 10
