--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-//        classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
+        classpath 'com.android.tools.build:gradle:2.1.2'
+//        classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
 //        classpath 'com.android.tools.build:gradle:2.2.0-alpha7'
 
         // NOTE: Do not place your application dependencies here; they belong
