Add support tab, fix #551

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
 
         <activity
             android:name=".activity.AboutActivity"
-            android:label="@string/action_about"
+            android:label="@string/action_help"
             />
 
         <activity
