--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -22,9 +22,8 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.nextgis.mobile"
-    >
+<manifest package="com.nextgis.mobile"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -48,16 +47,13 @@
 
     <uses-feature
         android:name="android.hardware.location"
-        android:required="true"
-        />
+        android:required="true"/>
     <uses-feature
         android:name="android.hardware.telephony"
-        android:required="false"
-        />
+        android:required="false"/>
     <uses-feature
         android:name="android.hardware.wifi"
-        android:required="false"
-        />
+        android:required="false"/>
     <!--
         <uses-feature
             android:name="android.hardware.camera"
@@ -70,24 +66,21 @@
     -->
 
     <supports-screens
-        android:largeScreens="true"
-        android:smallScreens="true"
         android:anyDensity="true"
+        android:largeScreens="true"
         android:normalScreens="true"
-        android:xlargeScreens="true"
         android:resizeable="true"
-        />
+        android:smallScreens="true"
+        android:xlargeScreens="true"/>
 
     <application
+        android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:name=".MainApplication"
-        >
+        android:label="@string/app_name">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -96,28 +89,27 @@
 
         <activity
             android:name=".activity.SettingsActivity"
-            android:label="@string/action_settings"
-            />
+            android:label="@string/action_settings"/>
 
         <activity
-            android:name=".activity.NGWSettingsActivityProxy"
-            android:label="@string/ngw_settings"
-            />
+            android:name="com.nextgis.maplibui.activity.NGWSettingsActivity"
+            android:label="@string/ngw_accounts"/>
+
+        <activity
+            android:name="com.nextgis.maplibui.activity.NGIDSettingsActivity"
+            android:label="@string/ngid_settings"/>
 
         <activity
             android:name=".activity.AboutActivity"
-            android:label="@string/action_help"
-            />
+            android:label="@string/action_help"/>
 
         <activity
             android:name=".activity.CreateVectorLayerActivity"
             android:label="@string/create_layer"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait"/>
 
         <service
-            android:name="com.nextgis.mobile.datasource.SyncService"
-            >
+            android:name="com.nextgis.mobile.datasource.SyncService">
             <intent-filter>
                 <action
                     android:name="android.content.SyncAdapter"
@@ -125,17 +117,13 @@
             </intent-filter>
             <meta-data
                 android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter"
-                />
+                android:resource="@xml/syncadapter"/>
         </service>
 
         <provider
             android:name="com.nextgis.maplib.datasource.LayerContentProvider"
             android:authorities="com.nextgis.mobile.provider"
             android:exported="false"
-            android:syncable="true"
-            />
-
+            android:syncable="true"/>
     </application>
-
 </manifest>
