--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,10 @@
         </activity>
 
         <activity
+            android:name=".activity.IntroActivity"
+            android:label="@string/app_name"/>
+
+        <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/action_settings"/>
 
