Move account authenticator to app level

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,18 @@
             android:screenOrientation="portrait"/>
 
         <service
+            android:name="com.nextgis.maplibui.account.NGWAuthenticatorService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator"/>
+        </service>
+
+        <service
             android:name="com.nextgis.mobile.datasource.SyncService">
             <intent-filter>
                 <action
