--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,30 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
+
+    // Setup the Sentry DSN from the file 'sentry.properties', which should contain
+    // sentry.dsn=https://publicKey:secretKey@host:port/1?options
+    // DO NOT PUBLIC the file 'sentry.properties' !!!
+    File sentryPropFile = rootProject.file('sentry.properties')
+    def String sentryDsn = ""
+    if (sentryPropFile.exists()) {
+        Properties sentryProp = new Properties()
+        sentryProp.load(sentryPropFile.newDataInputStream())
+        sentryDsn = sentryProp.get("sentry.dsn")
+    }
+
     defaultConfig {
         applicationId 'com.nextgis.mobile'
         minSdkVersion 9
         targetSdkVersion 25
         versionCode 25
         versionName '2.5.6'
+        buildConfigField "String", "SENTRY_DSN", "\"${sentryDsn}\""
     }
+
     productFlavors {
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -46,6 +61,7 @@ android {
             }
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -55,6 +71,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':maplibui')
+    compile 'com.joshdholtz.sentry:sentry-android:1.6.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.google.android.gms:play-services-analytics:10.0.1'
