--- a/build.gradle
+++ b/build.gradle
@@ -45,5 +45,6 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         google()
+        maven { url "https://dl.bintray.com/krazykira/maven" }
     }
 }
