--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.2'
 
     // Setup the Sentry DSN from the file 'sentry.properties', which should contain
     // sentry.dsn=https://publicKey:secretKey@host:port/1?options
@@ -41,7 +41,7 @@ android {
     defaultConfig {
         applicationId 'com.nextgis.mobile'
         minSdkVersion 14
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 42
         versionName '2.5.7.6'
         archivesBaseName = "ngmobile-$versionName"
@@ -69,7 +69,14 @@ dependencies {
     implementation project(':maplibui')
     implementation 'com.joshdholtz.sentry:sentry-android:1.6.0'
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+//    implementation 'com.android.support:support-compat:28.0.0'
+    implementation('com.android.support:recyclerview-v7:28.0.0') {
+        force = true
+    }
+    implementation('com.android.support:support-v4:28.0.0') {
+        force = true
+    }
     implementation 'com.google.android.gms:play-services-analytics:16.0.3'
     implementation 'com.github.TechFreak:WizardPager:1.0.3'
 }
