--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ buildscript {
         }
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.2'
@@ -46,5 +47,6 @@ allprojects {
         mavenCentral()
         maven { url "https://www.jitpack.io" }
         google()
+        jcenter()
     }
 }
