--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,15 +107,15 @@ dependencies {
     implementation project(':maplibui')
     implementation 'com.github.joshdholtz:Sentry-Android:1.6.0'
     implementation 'com.github.JakeWharton:NineOldAndroids:2.4.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
 //    implementation 'com.android.support:support-compat:28.0.0'
-    implementation('com.android.support:recyclerview-v7:28.0.0') {
+    implementation('androidx.recyclerview:recyclerview:1.0.0') {
         force = true
     }
-    implementation('com.android.support:support-v4:28.0.0') {
+    implementation('androidx.legacy:legacy-support-v4:1.0.0') {
         force = true
     }
-    implementation 'com.google.android.gms:play-services-analytics:16.0.7'
+    implementation 'com.google.android.gms:play-services-analytics:18.0.2'
 //    implementation 'com.github.TechFreak:WizardPager:1.0.3'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.barsrb:hyperlog-android:master-SNAPSHOT'
