--- a/wizardpager/build.gradle
+++ b/wizardpager/build.gradle
@@ -17,7 +17,7 @@ android {
 }
 
 dependencies {
-    implementation('com.android.support:support-v4:28.0.0') {
+    implementation('androidx.legacy:legacy-support-v4:1.0.0') {
         force = true
     }
 
