--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
 
     // Setup the Sentry DSN from the file 'sentry.properties', which should contain
     // sentry.dsn=https://publicKey:secretKey@host:port/1?options
@@ -40,8 +40,8 @@ android {
     defaultConfig {
         applicationId 'com.nextgis.mobile'
         minSdkVersion 14
-        targetSdkVersion 30
-        versionCode 100
+        targetSdkVersion 32
+        versionCode 101
         versionName '2.6.41'
         archivesBaseName = "ngmobile-$versionName"
         buildConfigField "String", "SENTRY_DSN", "\"${sentryDsn}\""
@@ -99,7 +99,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-    buildToolsVersion '30.0.3'
+    buildToolsVersion '32.1.0-rc1'
 }
 
 dependencies {
